--- a/utips.tex
+++ b/utips.tex
@@ -33,6 +33,17 @@
 
 	\item How to copy a whole line: Just press \texttt{yy} (y and y two times); move where you wish and press \texttt{p} to paste.
 
+        \item Repeat the last action. Press \texttt{.} (dot). 
+	
+	\item  Shift block right. \begin{enumerate}
+		
+			\item Move cursor to the beginning of the block;
+			\item Press \texttt{v} to select (a block) multiple lines;
+			\item Press \texttt{>} or \texttt{<} to move right or left respectively;
+			\item If multiple shifts needed, just press \texttt{.}.
+		\end{enumerate}
+
+
 	\item  Insert vertically multiple times. \begin{enumerate}
 		\item Move the cursor where you wish;
 		\item Press \texttt{Ctrl+v} and select lines where new text will be inserted; 
